Wed Sep 17 19:17:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.ads: Changed the formal name of RCI_Info from Name to
	  RCI_Name to match the non-distributed version.

Wed Sep 17 19:17:36 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-parint.adb: Ditto

Wed Sep 17 18:33:27 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Added a new target s-garcac.o

	* s-rpcuti.ads: Added Cache to the generic package name

	* s-rpc.adb: Removed useless dependency on System.Garlic.Caching

	* s-garcac.ads: Put the generic package into a sub-package to
	  allow generation of an ALI file and solve elaboration
	  problems.

	* s-garcac.adb: Ditto

	* s-garpoi.adb: Replaced Unchecked_Conversion by
	  Ada.Unchecked_Conversion.

Wed Sep 17 17:03:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garnam.adb: Use type Interfaces.Unsigned_32 instead of
	  Interfaces.C.Unsigned_Long. Fixes bug on Alpha.

	* s-garthi.ads: Ditto

Wed Sep 17 15:11:39 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.adb: Recognize special host names (imported from shell) 
	  that must not be resolved by the name resolver.

Sun Sep 14 15:55:58 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Set System.Standard_Library.Local_Partition_ID as
	  soon as the local PID is known. Used for exceptions.

Sat Sep 13 14:31:14 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (install-data-local): Compute path to libgnat.a
	  using ${srcdir}/../Dist/config.sdefault instead of trying to
	  guess the right path. Fixes bug when installing in a
	  non-standard directory with a non-standard GNAT installation.

Sun Sep  7 16:31:56 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.adb: Cover still more cases for localhost.

Sun Sep  7 16:14:40 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.adb: If the remote host is the same as localhost, then
	  do not use rsh but just use system() instead.

Fri Sep  5 19:03:51 1997  Samuel Tardieu  <sam@inf.enst.fr>
