@@ -1,3 +1,11 @@
+Fri Sep 19 19:49:05 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-garsta.adb: Use it.
+
+	* s-garter.ads: Add Init_Non_Terminating_Tasks.
+
+	* s-garter.adb: Ditto.
+
 Wed Sep 17 19:17:43 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-parint.ads: Changed the formal name of RCI_Info from Name to
